# RGBDPlaneDetection

./: .gitignore  README.md
RGBDPlaneDetection/: CMakeLists.txt  plane_detection.cpp  plane_detection.h
RGBDPlaneDetection/result/: 4150-plane-data.txt  41500color20-plane-data.txt  41500color20-plane-label.txt  41501color20-plane-data.txt  41501color20-plane-label.txt  41502color20-plane-data.txt  41502color20-plane-label.txt  41503color20-plane-label.txt  415acolor2018-07-20-11--plane-data.txt  415acolor2018-07-20-11--plane-label.txt  415bcolor2018-07-20-11--plane-data.txt  415bcolor2018-07-20-11--plane-label.txt  415ccolor2018-07-20-11--plane-data.txt  415ccolor2018-07-20-11--plane-label.txt  43500color2018-07-20-10--plane-data.txt  43500color2018-07-20-10--plane-label.txt  43501color2018-07-20-10--plane-data.txt  43501color2018-07-20-10--plane-label.txt  43502color2018-07-20-10--plane-data.txt  43502color2018-07-20-10--plane-label.txt  43503color2018-07-20-10--plane-data.txt  435200color2018-07-20-11--plane-data.txt  435200color2018-07-20-11--plane-label.txt  435425color2018-07-20-11--plane-data.txt  435425color2018-07-20-11--plane-label.txt  435autocolor2018-07-20-11--plane-data.txt  435autocolor2018-07-20-11--plane-label.txt  435b120color2018-07-20-12--plane-data.txt  435b120color2018-07-20-12--plane-label.txt  435b200color2018-07-20-11--plane-data.txt  435b200color2018-07-20-11--plane-label.txt  435b425color2018-07-20-11--plane-data.txt  435b425color2018-07-20-11--plane-label.txt  435bautocolor2018-07-20-11--plane-data.txt  435bautocolor2018-07-20-11--plane-label.txt  color2018-07-12-plane-data.txt  color2018-07-12-plane-label.txt  cube.png-plane-data.txt  cube.png-plane-label.txt
pictures/: depth2018-07-20-11-320001.ini  imgui.ini  rospack_cache_07629321174691800471
pictures/log/: latest
rgbd_plane_detection/: CMakeLists.txt  imgui.ini  main.cpp  package.xml  plane_detection.cpp  plane_detection.h
rgbd_plane_detection/include/peac/: AHCPlaneFitter.hpp
rgbd_plane_detection/include/rgbd_plane_detection/: rgbd_plane_detection.h  rgbd_plane_detection_utils.h
rgbd_plane_detection/input/test/: data.txt  depth2018-07-10-03-18.ini  label.txt  rospack_cache_07629321174691800471
rgbd_plane_detection/input/test/log/: latest
rgbd_plane_detection/launch/: rgbd_plane_detection.launch
rgbd_plane_detection/result/: 00000.jpg-plane-data-opt.txt  00000.jpg-plane-data.txt  00000.jpg-plane-label-opt.txt  00000.jpg-plane-label.txt  col-plane-data-opt.txt  col-plane-data.txt  col-plane-label-opt.txt  col-plane-label.txt  color2018-07-09-plane-data-opt.txt  color2018-07-09-plane-data.txt  color2018-07-09-plane-label-opt.txt  color2018-07-09-plane-label.txt  color2018-07-10-plane-data-opt.txt  color2018-07-10-plane-data.txt  color2018-07-10-plane-label-opt.txt  color2018-07-10-plane-label.txt  frame-plane-data.txt  frame-plane-label.txt
